--- a/frontend/package.json
+++ b/frontend/package.json
@@ -26,6 +26,8 @@
     "express": "^4.18.2",
     "jquery": "^3.7.1",
     "jquery-zoom": "^1.7.21",
+    "ngx-spinner": "^16.0.2",
+    "ngx-toastr": "^18.0.0",
     "nouislider": "^15.7.1",
     "rxjs": "~7.8.0",
     "slick": "^1.12.2",
